...
let ImageAvatar = "Avatar"
let LabelText = "Екатерина Новикова"
let LoginLabelText = "@ekaterina_nov"
let DescriptionLabelText = "Hello, world!"
let ImageLogoutButton = "ipad.and.arrow.forward"
let ImagePlaceholder = "placeholderAvatar"
let AlertTitle = "Пока, пока!"
let AlertMessage = "Уверены что хотите выйти?"
let TitleActionOne = "Да"
let TitleActionTwo = "Нет"
let LabelFont = CGFloat(23)
let LabelLoginFont = CGFloat(13)
let LabelDescriptionFont = CGFloat(13)

struct ProfileConfiguration {
...
