...
    func authViewController(_ vc: AuthViewController, didAuthenticateWithCode code: String)
}

final class AuthViewController: UIViewController{
    private struct Constants {
        static let imageView = "Logo_of_Unsplash"
        static let buttonTitleLogout = "Войти"
        static let labelTitleLogoutButtonFont = CGFloat(17)
        static let cornerRadiusLogoutButton = CGFloat(16)
    }
    
    private var oAuth2Service: OAuth2ServiceProtocol?
    
...
