...

public final class ImagesListCell: UITableViewCell {
    struct Constants { 
        static let imageCellCornerRadius = CGFloat(16)
        static let labelCellFont = CGFloat(13)
        static let reuseIdentifier = "ImagesListCell"
        static let buttonIdentifier = "likeButton"
    }
    
    weak var delegate: ImageListCellDelegate?
    
    lazy var cellImageView: UIImageView = {
        let cellImage = UIImageView()
...
